--- a/MapIt/MapIt.fsproj
+++ b/MapIt/MapIt.fsproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <Compile Include="Types.fs" />
+    <Compile Include="IO.fs" />
     <Compile Include="Runner.fs" />
     <Compile Include="Options.fs" />
     <Compile Include="Program.fs" />
